--- a/AR2AP.BLL/App.config
+++ b/AR2AP.BLL/App.config
@@ -11,4 +11,7 @@
       </parameters>
     </defaultConnectionFactory>
   </entityFramework>
+  <connectionStrings>
+    <add name="AR2APContainer" connectionString="metadata=res://*/AR2AP.csdl|res://*/AR2AP.ssdl|res://*/AR2AP.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\v11.0;attachdbfilename=D:\Projects\AR2AP\WebApp\App_Data\AR2AP.mdf;initial catalog=AR2AP;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
 </configuration>
