--- a/AR2AP.BLL/AR2AP.BLL.csproj
+++ b/AR2AP.BLL/AR2AP.BLL.csproj
@@ -11,6 +11,7 @@
     <AssemblyName>AR2AP.BLL</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -20,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -28,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
@@ -85,7 +88,12 @@
     <Compile Include="InvoiceTypeEnum.cs">
       <DependentUpon>AR2AP.tt</DependentUpon>
     </Compile>
+    <Compile Include="Partial\EmpEntity.partial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\AgencyRepository.cs" />
+    <Compile Include="Repository\EmpRepository.cs" />
+    <Compile Include="Repository\IRepository.cs" />
+    <Compile Include="Repository\RepositoryTransaction.cs" />
     <Compile Include="TermEntity.cs">
       <DependentUpon>AR2AP.tt</DependentUpon>
     </Compile>
@@ -121,6 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="AR2AP.edmx.sql" />
+    <Content Include="InitDB.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
