--- a/AR2AP.BLL/AR2AP.BLL.csproj
+++ b/AR2AP.BLL/AR2AP.BLL.csproj
@@ -82,6 +82,9 @@
     <Compile Include="CollectionEntity.cs">
       <DependentUpon>AR2AP.tt</DependentUpon>
     </Compile>
+    <Compile Include="CurrencyTypeEnum.cs">
+      <DependentUpon>AR2AP.tt</DependentUpon>
+    </Compile>
     <Compile Include="EmpEntity.cs">
       <DependentUpon>AR2AP.tt</DependentUpon>
     </Compile>
@@ -94,6 +97,7 @@
     <Compile Include="Repository\EmpRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\RepositoryTransaction.cs" />
+    <Compile Include="Repository\TermRepository.cs" />
     <Compile Include="TermEntity.cs">
       <DependentUpon>AR2AP.tt</DependentUpon>
     </Compile>
