--- a/AR2AP.Service/AR2AP.Service.csproj
+++ b/AR2AP.Service/AR2AP.Service.csproj
@@ -47,7 +47,7 @@
     <Compile Include="EmpService.cs" />
     <Compile Include="ISimpleService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TermService.cs" />
+    <Compile Include="TeamService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\AR2AP.BLL\AR2AP.BLL.csproj">
