In order to compatible with WinXP,have to use .NET Framework 4.0

--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -3,4 +3,6 @@
   <repository path="..\AR2AP.BLL\packages.config" />
   <repository path="..\WebApp.Tests\packages.config" />
   <repository path="..\WebApp\packages.config" />
+  <repository path="..\WebApp2\packages.config" />
+  <repository path="..\WebApp3\packages.config" />
 </repositories>
