--- a/AR2AP.Service/AR2AP.Service.csproj
+++ b/AR2AP.Service/AR2AP.Service.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AgencyService.cs" />
+    <Compile Include="ARService.cs" />
     <Compile Include="ClientService.cs" />
     <Compile Include="EmpService.cs" />
     <Compile Include="ISimpleService.cs" />
