--- a/AR2AP.BLL/AR2AP.BLL.csproj
+++ b/AR2AP.BLL/AR2AP.BLL.csproj
@@ -92,6 +92,7 @@
     <Compile Include="Partial\TeamEntity.partial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AgencyRepository.cs" />
+    <Compile Include="Repository\ARRepository.cs" />
     <Compile Include="Repository\ClientRepository.cs" />
     <Compile Include="Repository\EmpRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
