--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -194,13 +194,16 @@
     <Compile Include="Common\HtmlHelper\TeamDropDownListExtensions.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ARController.cs" />
+    <Compile Include="Controllers\CollectionController.cs" />
     <Compile Include="Controllers\FoundationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Account\LoginVModel.cs" />
+    <Compile Include="Models\AR\CollectionAddVModel.cs" />
     <Compile Include="Models\AR\AddVModel.cs" />
+    <Compile Include="Models\AR\CollectionListVModel.cs" />
     <Compile Include="Models\AR\ListVModel.cs" />
     <Compile Include="Models\CurrEmpData.cs" />
     <Compile Include="Models\Foundation\AgencyMergeVModel.cs" />
@@ -331,6 +334,7 @@
     <Content Include="Views\AR\List.cshtml" />
     <Content Include="Views\AR\Add.cshtml" />
     <Content Include="Views\Shared\EditorTemplates\DateTime.cshtml" />
+    <Content Include="Views\AR\CollectionAdd.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
