--- a/AR2AP.BLL/AR2AP.BLL.csproj
+++ b/AR2AP.BLL/AR2AP.BLL.csproj
@@ -89,12 +89,14 @@
     <Compile Include="Partial\AgencyEntity.partial.cs" />
     <Compile Include="Partial\AREntity.partial.cs" />
     <Compile Include="Partial\ClientEntity.partial.cs" />
+    <Compile Include="Partial\CollectionEntity.partial.cs" />
     <Compile Include="Partial\EmpEntity.partial.cs" />
     <Compile Include="Partial\TeamEntity.partial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\AgencyRepository.cs" />
     <Compile Include="Repository\ARRepository.cs" />
     <Compile Include="Repository\ClientRepository.cs" />
+    <Compile Include="Repository\CollectionRepository.cs" />
     <Compile Include="Repository\EmpRepository.cs" />
     <Compile Include="Repository\IRepository.cs" />
     <Compile Include="Repository\RepositoryTransaction.cs" />
