--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\AR2AP.BLL\packages.config" />
+  <repository path="..\AR2AP.Service\packages.config" />
   <repository path="..\WebApp.Tests\packages.config" />
   <repository path="..\WebApp\packages.config" />
   <repository path="..\WebApp2\packages.config" />
