--- a/AR2AP.BLL/packages.config
+++ b/AR2AP.BLL/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="EntityFramework.zh-Hans" version="5.0.0" targetFramework="net45" />
+  <package id="LinqKit" version="1.0" targetFramework="net40" />
 </packages>
